<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="model"
            type="com.duck.owlcctv.viewmodel.MenuViewModel"/>
    </data>
    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.duck.owlcctv.activity.AuthActivity"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_height="match_parent"
        android:background="@color/appBackground"
        android:columnCount="1"
        android:rowCount="1"
        android:layout_width="match_parent">
        <GridLayout
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="2"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/btn01"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp">
                <ImageButton
                    android:src="@drawable/cctv"
                    android:onClick="@{() -> model.navToCCTV()}"
                    android:clickable="true"
                    android:id="@+id/imageButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_button"
                    android:contentDescription="@string/btn_cctv_desc" />
                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_cctv"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn02"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp">
                <ImageButton
                    android:src="@drawable/list"
                    android:onClick="@{() -> model.navToRecorded()}"
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_button"
                    android:contentDescription="@string/btn_cctv_desc" />
                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_video"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn03"
                android:orientation="vertical"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp">
                <ImageButton
                    android:src="@drawable/settings"
                    android:onClick="@{() -> model.navToSettings()}"
                    android:layout_gravity="center"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/circle_button"
                    android:contentDescription="@string/btn_cctv_desc" />
                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_setting"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn04"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp">
                <ImageButton
                    android:src="@drawable/quit"
                    android:onClick="@{() -> model.quitApp()}"
                    android:id="@+id/imageButton2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/circle_button"
                    android:contentDescription="@string/btn_cctv_desc" />

                <TextView
                    android:textSize="10sp"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_exit"
                    android:textAlignment="center" />
            </LinearLayout>
        </GridLayout>
    </GridLayout>
</layout>
